# thermograph

./: CMakeLists.txt  Makefile  README.rst  def.scm  eqnbuilder.m4  eqnlib.m4  flags.m4  jacobian.scm  library.m4  mixer.c  model.m4  play.scm  tg-build  tg-prepare.scm  thermograph.c  ws_table.h
docs/: ex1.pic
scm-scr/: bcs-inject.scm  bcs.scm  valve.scm
scripts/: bcs-inject.scm  bcs.scm  header-inject.scm  header.scm  to-header.scm  to-model-df.scm  to-model-f.scm  to-model-fdf.scm  to-thermograph.scm  utils.scm  valve-inject.scm  valve.scm
src/: Makefile  if97dna.c
